log
Fri 12 Aug 2022 04:37:27 PM UTC: 
 tests:  0|7
total_score: 0/70
b8d7504
Fri 12 Aug 2022 04:43:43 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
3c1a78a
Fri 12 Aug 2022 05:22:23 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:42:14: error: expected expression before ‘int’
   42 |   tot = suma(int a[], int n);
      |              ^~~
exercises.c:42:9: error: called object ‘suma’ is not a function or function pointer
   42 |   tot = suma(int a[], int n);
      |         ^~~~
exercises.c:39:48: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |                                          ~~~~~~^~~~
exercises.c:43:16: error: expected expression before ‘int’
   43 |   resto = suma(int a[], int n) - suma(int a[], int m);
      |                ^~~
exercises.c:43:11: error: called object ‘suma’ is not a function or function pointer
   43 |   resto = suma(int a[], int n) - suma(int a[], int m);
      |           ^~~~
exercises.c:39:48: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |                                          ~~~~~~^~~~
exercises.c:43:39: error: expected expression before ‘int’
   43 |   resto = suma(int a[], int n) - suma(int a[], int m);
      |                                       ^~~
exercises.c:43:34: error: called object ‘suma’ is not a function or function pointer
   43 |   resto = suma(int a[], int n) - suma(int a[], int m);
      |                                  ^~~~
exercises.c:39:48: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |                                          ~~~~~~^~~~
exercises.c:44:22: error: expected ‘;’ before ‘}’ token
   44 |   *suma = tot - resto
      |                      ^
      |                      ;
......
   48 | }
      | ~                     
Compilation failed
0200987
Fri 12 Aug 2022 05:23:05 PM UTC: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
b2df198
Fri 12 Aug 2022 05:29:36 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[], n-m);
      |               ^~~
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[], n-m);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:40:29: error: expected ‘;’ before ‘]’ token
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[], n-m);
      |                             ^
      |                             ;
exercises.c:40:29: error: expected statement before ‘]’ token
exercises.c:40:30: error: expected statement before ‘)’ token
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[], n-m);
      |                              ^
exercises.c:40:40: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[], n-m);
      |                                        ^~~
exercises.c:40:34: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[], n-m);
      |                                  ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
5afba01
Fri 12 Aug 2022 05:29:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[],int n-m);
      |               ^~~
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[],int n-m);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:40:29: error: expected ‘;’ before ‘]’ token
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[],int n-m);
      |                             ^
      |                             ;
exercises.c:40:29: error: expected statement before ‘]’ token
exercises.c:40:30: error: expected statement before ‘)’ token
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[],int n-m);
      |                              ^
exercises.c:40:40: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[],int n-m);
      |                                        ^~~
exercises.c:40:34: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n]) - sumaN(int a[],int n-m);
      |                                  ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
da74041
Fri 12 Aug 2022 05:30:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n) - sumaN(int a[],int n-m);
      |               ^~~
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n) - sumaN(int a[],int n-m);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:40:39: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n) - sumaN(int a[],int n-m);
      |                                       ^~~
exercises.c:40:33: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n) - sumaN(int a[],int n-m);
      |                                 ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
4b9e268
Fri 12 Aug 2022 05:30:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n) - (sumaN(int a[],int n-m));
      |               ^~~
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n) - (sumaN(int a[],int n-m));
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:40:40: error: expected expression before ‘int’
   40 | *suma = sumaN(int a[], int n) - (sumaN(int a[],int n-m));
      |                                        ^~~
exercises.c:40:34: error: too few arguments to function ‘sumaN’
   40 | *suma = sumaN(int a[], int n) - (sumaN(int a[],int n-m));
      |                                  ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
81c0a9f
